@@ -3,21 +3,22 @@ Hash: SHA256
 
 DIST stig-0.5.0a.tar.gz 217135 SHA256 0ffbb7fede60d617b876c5e484df381f9bce820b302c17bbe5275074cc4e7fde SHA512 44b465255689a7cc85f90292b988f5a0b970431b1844a326ada9f3667860aed274c04ac3dd6e85e46b9eb04ca03a8ebc8024282771076efe32b2c76028839ab3 WHIRLPOOL e4aae2ffabb0c47873150476df3d16a39d443b9d77141e6292482af960ec0ba06e6de91c5fdf4bd1b6a39c9d61ff24621e6c3feeeb83e8fc747d4d602528b5b6
 DIST stig-0.6.0a.tar.gz 262908 SHA256 870473488d460bdd51cef3b40f920e588b3e986346eef4913047cde6a1fcc8ae SHA512 170ff603a65302c88af48af26c53a34708af6556f80dfdbd70f2fe12d00360075176ff294c640205e683ff60765cb493c687ef080b0c64356a4d078941a544ac WHIRLPOOL c7d542ff2f145bdc0c28974198206d00611db33cff737a98306aaa6a7ab53dc0735d5622bee378bf9bae4ddb2362308d46e4f5b98d670a5c94bb37e83fbe67b6
+DIST stig-0.7.3a.tar.gz 276281 SHA256 8f63b10d78cde951e55d54aed34488d7f1f9fafccf5c7190dbdd4bd931926303 SHA512 daadc5cffdf0c844fc8cf0c1b25741441cd968f6769f77885945c6393f8ff5714ba1e1e8b1fde8f8acec1386f2a303ab77362b4f17f77118cb537a3185caf4e7 WHIRLPOOL 5c317a88ce6fbde864c13ac4d34356986c05ac6e5fa6f462c67c0af40d12a2cef08b64cfd00f3fe3c76bc2277c976d5aa807cd50a0e8d3f2fb918a024a3df519
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj/EytfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAllkz0NfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn1f2BAAx5NHrC6rcaAiqKKam6ujQpRTw0QvZvzfBlp2/0EujARGxs9k+fHK/td2
-IqNhY8C4MZTzpLzqxRE3o0SJsVAoG1ks/Cxa8zvo1BqjyDP+LkTJpDxDhhIjMVwa
-zk9V62sJ9Uo37WFNabDym2fPvk5+AvCugHQm5B28w8NpOWDqxoGtenwn20j5ABtr
-UjiomfMJP2AWoXln2o7AjX/5pLJ3n5HUmPFXHyXguhKI8iD4PISry5Bpat5DZeCj
-WgluQuO9wL60LWKME6kweHJHUrA9mrIY/NQoORLac1Mi0G1hligiOURrbV0hT1bb
-kKKHVpRkRile3akxlcOMj2oVINo7P4TtyerbmHquvZITQRqr7gcNp5cgb8OF68wX
-ebVw013P2+QxWkalzqilkdwPlJAMyb5Q9+0SkpAiFFNMs3hO784xo8ey95yyKTke
-NWPCvQWYM59Ct5JtaF2PPC96sNCZs6h2DwshOZanpdX9fiM1PasAFhnuzaBBVbyW
-XsrgBrAR64+6fn8qhujCIxEBoYBKPlm11RZ76fuuTlp8UysLhjOX2zGWmb9tVl88
-DCAcxTc4C5v08vDmbpNR5xvLtegSvIZZbQdX5Fi1CrmTOAi9UvSuPV/y/gXhgu11
-X820OC4o20rmtFmmfCdz/Kx1TmicJbHd0wOMsdP+PNVazDgxYNg=
-=h3lx
+Hn3DIxAAqPH/e7AJz8i+aOM1GSLc/CWkxS8icnyRhXkIkcwRcETdqvJD0h43u1b7
+CBCQM1U6ILStjlj7gIWMU+Sd36suYvG5+c/ju/6/xXw58mJkOe9zlCCBRC7pOq9u
+2VGqqvKgsOWErfCqNH+MGKhtqs7Z3b3JPoB77rImLysM0Co10lsZQCP0qa46nBOs
+pr+FYjLQZOhA6ZYAU6KQ4JU/cJdk2SDmpZZ+W54a4sZWo8HtRqfOfMn9VOlB2MoZ
+xNctB+vXPMOqfpBy6RkT4+lFGbBDmbl/Ld9TxHqHSxN301Y07f5dqSU45t7da3i1
+XUsqmeNDdwj+S97SCuc9PFu2ClJB5n5X6m9L4GqcAvxsYbWm+LfGOKO+ZWKmG5s4
+JM4WDPSrGK4zmKR8f3p3aPs7EBMQtVzL0HG384LWjh/gqHp/a/e/9PCzZq7LwOHz
+2BXnrvlWUGIGBkOYkxVFKQFt1R7dL4uILRJ4vgujVwEKtfFVSM0z/aRXk0UdoxFY
+aOSOonQYTamorn6MLu7n+pZg6EWfH7HtBoMKUgvUEDH8H+grFulzUTmWKByL6VcC
+0NLN1f9A4ZGcI3CbU0wGmSXk4txQNk+6bRlJb+WIkZD3fpGu0tX/J6A3CKSK3h7s
+ek1U9KjG3izpiT+86WHkSPrgbkMD+BVbVmekQPfluxg7HIORW9k=
+=QIr7
 -----END PGP SIGNATURE-----
